[package]
name = "petersburg"
version = "0.0.1"
edition = "2021"

[dependencies]
itertools = "*"
png = "0.17.5"
rand = "*"
gtk = "*"
gdk = "*"
glib = "*"
colored = "*"
once_cell = "*"
single_value_channel = "*"
crossbeam = "*"
priority-queue = "*"
cairo-rs = {version = "*", features = ["png"]}
clap = { version = "4.1.4", features = ["derive"] }
lldb = "*"
[profile.release]
debug = true
